<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xutong.xutong_habittracker.AddEditHabitActivity">

    <!-- Code taken from
        http://stackoverflow.com/questions/10978038/restrict-edittext-to-single-line
        http://stackoverflow.com/questions/10870111/edit-text-without-autocorrect
    -->
    <EditText
        android:id="@+id/edit_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_habit_name"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:paddingTop="20dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_date"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_days"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:maxLines="1" />

    <Button
        android:id="@+id/add_habit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_habit_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />

    <Button
        android:id="@+id/cancel_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_add_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp" />

</LinearLayout>
